fixing layout issues

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@
   font-size: 2em;
 }
 
-#projectsMenu ul {
+#projectsMenu {
   list-style-type: none;
   
 }
